--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,8 @@
-== README
+= Careeralytics
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+Careers + Analytics = Careeralytics!
 
-Things you may want to cover:
+== Description
 
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+Careeralytics imports job data from {Stack Overflow Careers}[https://careers.stackoverflow.com/]
+and displays it in pretty graphs.
